# scanlight

./: .gitignore  .gitmodules  LICENSE  README.md  _config.yml  big.md  big_scanlight.md  hw_v2.md  upgrade.md  v4.md
.github/: FUNDING.yml
3d/: 24d-p0010 diffuser housing.SLDPRT  24d-p0020 diffuser cover plate.SLDPRT  24d-p0040 diffuser frame.SLDPRT  24d-p0040 diffuser frame.STL  parts_list.md  parts_list_readme.md
3d/horizontal/: parts_list.md  (+5 more)
automation/: .gitignore  CMakeLists.txt  LICENSE  README.md  autoflasher.py  bsl1_controller_v1.0.uf2  bsl1_controller_v1.1.uf2  bsl_control_interface.md  pico_sdk_import.cmake  sl2_controller_v1.1.uf2  sl2_controller_v1.2.uf2  sl2_controller_v1.3.uf2  sl4_controller_v1.1.uf2
automation/app/: .eslintrc.cjs  index.html  package.json  vite.config.js
automation/app/src/: serial.js
automation/app/src/assets/: main.css
automation/app_bsl/: package-lock.json  package.json
automation/app_bsl/src/: App.vue  config.js  protocol.js
automation/app_bsl/src/assets/: main.css
automation/app_bsl/src/components/: Main.vue
automation/app_bsl/src/plugins/: vuetify.js  webfontloader.js
automation/app_sl2/: index.html  package-lock.json
automation/app_sl2/src/components/: Main.vue
automation/app_sl2/src/plugins/: vuetify.js
automation/firmware/: CMakeLists.txt  main.c
automation/firmware_bsl1/: CMakeLists.txt  config.h  main.c  protocol.c  protocol.h
automation/firmware_sl2/: CMakeLists.txt  README.md  main.c
bsl_array_pcb_r1/: bsl_array_v1.kicad_pro  bsl_array_v1.kicad_sch
bsl_driver_pcb_r1/: bsl_drv_v1.kicad_pro  usb ports.kicad_sch
data/: plot.py  plot_big.py
images/: big_scanlight_diagram.af  big_scanlight_dimension_drawing.af  big_scanlight_led_zones.af  big_scanlight_tonecarrier_adapter.af  big_scanlight_valoi360_adapter.af  film_carriers_drawing.af  scanlight_header.af  scanlight_v4_diagram.af  scanlight_v4_dimension_drawing.af  scanlight_v4_dimension_drawing_horiz_mount.af  scanlight_v4_tonecarrier_adapter.af  scanlight_v4_valoi360_adapter.af  scanlight_v4_valoi360_adapter_2.af  shutter_timing_diagram.af  timing diagram.kicad_pro  timing diagram.kicad_sch
pcb/: backlight.kicad_pcb  backlight.step  power_input.kicad_sch
pcb_r1/: backlight.kicad_pcb  backlight.kicad_sch
pcb_r2/: backlight.kicad_pro  scanlight_bom_r2_20250328.csv
pcb_r3/: backlight.kicad_pcb  backlight.kicad_pro  backlight.kicad_sch  power_input.kicad_sch  scanlight_bom_r3_20251023.csv
(+174 files in other folders)
